# antimony

./: .gitignore  BUILDING.md  CMakeLists.txt  Makefile  README.md  antimony  app.py  canvas.py  colors.py  connection.py  connector.py  datum.py  editor.py  frame.py  io.py  main.py  name.py  node.py  point.py  sb.pro
app/: .gitignore  CMakeLists.txt  Info.plist  app.pro  deploy_app.sh  make_icon.sh  sb.icns
app/app/: .app.cpp.~undo-tree~  .main.cpp.~undo-tree~  app.cpp  app.h  main.cpp  update.cpp  update.h
app/canvas/: canvas_view.cpp  canvas_view.h  datum_editor.cpp  datum_editor.h  datum_port.cpp  datum_port.h  datum_row.cpp  datum_row.h  info.cpp  info.h  scene.cpp  scene.h  view.cpp  view.h
app/canvas/connection/: base.cpp  base.h  dummy.cpp  dummy.h
app/canvas/inspector/: buttons.cpp  buttons.h  export.cpp  export.h  frame.cpp  frame.h  title.cpp  title.h  util.cpp  util.h
app/canvas/subdatum/: subdatum_frame.cpp  subdatum_frame.h  subdatum_row.cpp
app/dialog/: exporting.cpp  exporting.h  resolution.cpp  resolution.h
app/export/: export_heightmap.cpp  export_heightmap.h  export_mesh.cpp  export_mesh.h  export_worker.cpp
app/forms/: resolution_dialog.ui
app/gl/: gl.qrc  shaded.frag
app/graph/constructor/: constructor.h  populate.cpp
app/graph/hooks/: export.cpp  export.h  hooks.h  title.cpp  ui.cpp  ui.h
app/graph/proxy/: base_datum.cpp  base_datum.h  datum.cpp  datum.h  graph.cpp  graph.h  node.cpp  node.h  subdatum.cpp  subdatum.h  util.h
app/graph/serialize/: deserializer.cpp  deserializer.h  serializer.h
app/script/: editor.cpp  editor.h  frame.cpp  frame.h  syntax.cpp  syntax.h
app/src/app/: app.cpp  app.h  main.cpp
app/src/app/undo/: stack.cpp  stack.h  undo_add_link.cpp  undo_add_link.h  undo_add_multi.cpp  undo_add_multi.h  undo_change_expr.cpp  undo_change_expr.h  undo_change_script.cpp  undo_change_script.h  undo_command.cpp  undo_command.h  undo_delete_link.cpp  undo_delete_link.h  undo_delete_multi.cpp  undo_delete_multi.h  undo_delete_node.cpp  undo_delete_node.h  undo_move.cpp
app/src/control/: control.cpp  control.h  control_root.cpp  control_root.h  point.h  proxy.h  wireframe.cpp  wireframe.h
app/src/export/: export_heightmap.cpp  export_heightmap.h  export_mesh.cpp  export_voxels.cpp  export_voxels.h
app/src/graph/: graph.pri
app/src/graph/datum/: datum.h  enum.h  link.cpp
app/src/graph/hooks/: export.cpp  export.h  hooks.cpp  hooks.h  meta.cpp  output.cpp  output.h  title.cpp  title.h  ui.cpp
app/src/graph/node/: deserializer.cpp  deserializer.h  node.cpp  node.h  proxy.cpp  proxy.h  root.h  serializer.cpp  serializer.h
app/src/render/: render_image.h  render_proxy.cpp  render_proxy.h  render_task.cpp  render_task.h  render_worker.cpp  render_worker.h
app/src/test/: main.cpp  test_datum.cpp  test_datum.h  test_function.h  test_name.h  test_node.h  test_script.cpp  test_serialize.h  test_shape.h
app/src/ui/: main_window.cpp  main_window.h
app/src/ui/canvas/: canvas.cpp  canvas.h  connection.cpp  connection.h  graph_scene.cpp  graph_scene.h  port.cpp  port.h
app/src/ui/dialogs/: resolution_dialog.cpp  resolution_dialog.h
app/src/ui/forms/: exporting_dialog.ui  main_window.ui
app/src/ui/script/: editor.cpp  editor.h  script_pane.cpp  script_pane.h  syntax.cpp
app/src/ui/util/: colors.cpp  colors.h  scene.h
app/src/ui/viewport/: depth_image.cpp  depth_image.h  view_selector.cpp  view_selector.h  viewport.cpp  viewport.h  viewport_scene.cpp  viewport_scene.h
app/undo/: undo_add_datum.cpp  undo_add_datum.h  undo_add_node.cpp  undo_add_node.h  undo_catcher.h  undo_change_expr.cpp  undo_change_script.cpp  undo_change_script.h  undo_command.cpp  undo_command.h  undo_delete_link.cpp  undo_delete_link.h  undo_delete_multi.h  undo_delete_node.cpp  undo_delete_node.h  undo_move_datum.cpp  undo_move_datum.h  undo_move_node.cpp  undo_move_node.h  undo_stack.cpp
app/viewport/: gl.cpp  gl.h  image.cpp  image.h  scene.cpp  scene.h  view.cpp  view.h
app/viewport/control/: control.cpp  control.h  control_instance.cpp  control_instance.h  point.cpp  point.h  wireframe.cpp
app/viewport/render/: instance.cpp  instance.h  task.cpp  task.h
app/window/: base.cpp  base.h  base_viewport_window.cpp  base_viewport_window.h  base_window.ui  canvas.cpp  canvas.h  quad.h  viewport.cpp  viewport.h
fab/c/: CMakeLists.txt
fab/c/formats/: png.c
fab/c/render/: command.c  command.h  eval.frag  glrender.c  render.c  render.h  shader.c  shader.h  tape.c  tape.h
fab/c/render/shaders/: blit.frag  eval.frag  texture.vert
fab/c/tree/: eval.c  eval.h  packed.c  packed.h  parser.c  render.c  tree.c  tree.h  triangulate.c  triangulate.h
fab/c/tree/math/: math_f.c  math_i.h  math_r.c  math_r.h
fab/c/tree/node/: opcodes.c  printers.c
fab/c/util/: region.h
lib/fab/: CMakeLists.txt  fab-tests.pro  fab.pri  fab.pro  flex.pri  lemon.pri
lib/fab/inc/fab/: fab.h
lib/fab/src/: fab.cpp
lib/fab/src/formats/: lodepng.cpp  png.c  stl.c
lib/fab/src/tree/: eval.c  parser.c  render.c  tree.c  triangulate.cpp  v2parser.cpp  v2syntax.l  v2syntax.y
lib/fab/src/types/: bounds.cpp  shape.cpp  transform.cpp
lib/fab/src/util/: region.c  ustack.c
lib/fab/tests/: main.cpp  parser.cpp  shape.cpp
lib/graph/: CMakeLists.txt  graph-tests.pro  graph.pri  graph.pro
lib/graph/inc/graph/: datum.h  graph.h  graph_node.h  (+7 more)
lib/graph/src/: datum.cpp  graph.cpp  graph_node.cpp  node.cpp  proxy.cpp  script.cpp  script_node.cpp  util.cpp
lib/graph/tests/: datum.cpp  graph.cpp  link.cpp  main.cpp  node.cpp  script.cpp  subgraph.cpp
libfab/c/: CMakeLists.txt
libfab/c/asdf/: asdf.c  asdf.h  cache.c  cache.h  cms.c  cms.h  contour.c  contour.h  distance.c  distance.h  file_io.c  file_io.h  import.c  import.h  neighbors.c  neighbors.h  render.c  render.h  triangulate.c  triangulate.h
libfab/c/formats/: mesh.c  mesh.h  png.c  png.h  stl.c  stl.h
libfab/c/tree/: eval.c  parser.c  parser.h  render.h  tree.h
libfab/c/util/: constants.h  interval.h  macros.h  path.c  path.h  region.c  region.h  squares.h  switches.h  vec3f.c  vec3f.h
(+1087 files in other folders)
